@@ -73,6 +73,7 @@ my $runtime_requires = {
   'Path::Class'              => '0.18',
   'Scope::Guard'             => '0.03',
   'SQL::Abstract'            => '1.72',
+  'Test::Deep'               => '0.108',
   'Try::Tiny'                => '0.04',
 
   # XS (or XS-dependent) libs
