@@ -44,6 +44,8 @@ BEGIN {
 
     Class::Accessor::Grouped
     Class::C3::Componentised
+
+    Test::Deep::NoTest
   /, $] < 5.010 ? 'MRO::Compat' : () };
 
   $test_hook = sub {
