@@ -2,6 +2,8 @@ Revision history for DBIx::Class
 
     * New Features / Changes
         - Allow schema cloning to mutate attributes
+        - DBIC now attempts more aggressive de-duplication of where
+          conditions on resultset chaining
 
     * Fixes
         - Fix issue where the query was becoming overly mangled when trying
